[package]
name = "ebnf-fmt"
version = "0.1.0"
categories = ["development-tools"]
edition = "2021"
keywords = ["formatter", "ebnf"]
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/ebnf"
description = "A formatting library for the ISO 14977 EBNF notation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fromstr = ["strum"]

[dependencies]
ebnf-parser = { version = "0.1.0", path = "../ebnf-parser" }
serde = { version = "1.0.145", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
