[package]
name = "ebnf-parser"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/ebnf"
description = "An LL(1) parser for the ISO 14977 EBNF notation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
