[package]
name = "tree-sitter-ebnf"
description = "ebnf grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "ebnf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/RubixDev/ebnf"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
