[package]
name = "tree-sitter-ebnf"
version = "0.1.0"
categories = ["parsing", "text-editors"]
edition = "2018"
keywords = ["incremental", "parsing", "ebnf"]
license = "MIT"
repository = "https://github.com/RubixDev/ebnf"
description = "EBNF grammar for the tree-sitter parsing library"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
